--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
     "@stitches/react": "^1.2.8",
     "axios": "^1.6.1",
     "keen-slider": "^6.8.6",
     "next": "14.0.1",
+    "phosphor-react": "^1.4.1",
     "react": "^18",
     "react-dom": "^18",
     "stripe": "^14.3.0"
